# plone-registryfromenviron

./: .gitignore  CHANGES.md  README.md  pyproject.toml
docs/plans/: 2026-04-20-v2.0-refactor.md
src/plone/registryfromenviron/: __init__.py  configure.zcml  environ.py  patch.py  registry.py  setuphandlers.py  upgrades.py
src/plone/registryfromenviron/profiles/default/: install_marker.txt  metadata.xml
src/plone/registryfromenviron/profiles/uninstall/: uninstall_marker.txt
tests/: test_overrides.py
